Fix arrow to email alignment

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -19,6 +19,10 @@
   display: flex;
 }
 
+.email-top-margin {
+  margin-top: 33px;
+}
+
 @media screen and (max-width: 750px) {
   .intro-top {
     line-height: 1.4em;
